Adding the edit class

--- a/QTR2/projects/learning-journal/learning_journal/learning_journal/templates/list.jinja2
+++ b/QTR2/projects/learning-journal/learning_journal/learning_journal/templates/list.jinja2
@@ -17,4 +17,5 @@
 <p>This journal is empty</p>
 
 {% endif %}
+<p><a href="{{ request.route_url('action', action='create') }}">New Entry</a></p>
 {% endblock %}
