--- a/QTR2/projects/learning-journal/learning_journal/learning_journal/templates/detail.jinja2
+++ b/QTR2/projects/learning-journal/learning_journal/learning_journal/templates/detail.jinja2
@@ -8,5 +8,7 @@
 
 <p>Created <strong title="{{entry.created}}">{{entry.created}}</strong></p>
 
+<li><a href="{{ request.route_url('detail') }}">Edit</a></li>
+
 </article>
 {% endblock %}
