--- a/QTR2/projects/learning-journal/learning_journal/learning_journal/templates/layout.jinja2
+++ b/QTR2/projects/learning-journal/learning_journal/learning_journal/templates/layout.jinja2
@@ -18,13 +18,13 @@
       </nav>
     </header>
     <main>
-      <h1>My Python Journal</h1>
+      <h1>Schuyler's Learning Journal</h1>
       <section id="content">
       {% block body %}{% endblock %}
       </section>
     </main>
     <footer>
-      <p>Created in the UW PCE Python Certificate Program</p>
+      <p>Work in Progress</p>
     </footer>
   </body>
 </html>
