--- a/QTR2/projects/learning-journal/learning_journal/learning_journal/templates/edit.jinja2
+++ b/QTR2/projects/learning-journal/learning_journal/learning_journal/templates/edit.jinja2
@@ -1,4 +1,7 @@
-
+{% extends "templates/layout.jinja2" %}
+{% block body %}
+<h2>Create a Journal Entry</h2>
+<form action="" method="POST">
 {% for field in form %}
   {% if field.errors %}
     <ul>
@@ -11,3 +14,4 @@
 {% endfor %}
     <p><input type="submit" name="submit" value="Submit" /></p>
 </form>
+{% endblock %}
