--- a/QTR2/projects/learning-journal/learning_journal/learning_journal/templates/list.jinja2
+++ b/QTR2/projects/learning-journal/learning_journal/learning_journal/templates/list.jinja2
@@ -1,6 +1,19 @@
 
 {% extends "layout.jinja2" %}
 {% block body %}
+{% if login_form %}
+<aside><form action="{{ request.route_url('auth', action='in') }}" method="POST">
+  {% for field in login_form %}
+    {% if field.errors %}
+      <ul>{% for error in field.errors %}
+        <li>{{ error }}</li>
+      {% endfor %}</ul>
+    {% endif %}
+      <p>{{ field.label }}: {{ field }}</p>
+  {% endfor %}
+  <p><input type="submit" name="Log In" value="Log In"/></p>
+</form></aside>
+{% endif %}
 
 {% if entries %}
 
