--- a/learning_journal/templates/layout.jinja2
+++ b/learning_journal/templates/layout.jinja2
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+  <link href="{{ request.static_url('learning_journal:static/styles.css') }}" rel="stylesheet">
     <meta charset="utf-8">
     <title>Python Learning Journal</title>
     <!--[if lt IE 9]>
@@ -17,13 +18,13 @@
       </nav>
     </header>
     <main>
-      <h1>My Python Journal</h1>
+      <h1>Schuyler's Learning Journal</h1>
       <section id="content">
       {% block body %}{% endblock %}
       </section>
     </main>
     <footer>
-      <p>Created in the UW PCE Python Certificate Program</p>
+      <p>Work in Progress</p>
     </footer>
   </body>
 </html>
