--- a/learning_journal/templates/resources/list.jinja2
+++ b/learning_journal/templates/resources/list.jinja2
@@ -13,22 +13,19 @@
   <p><input type="submit" name="Log In" value="Log In"/></p>
 </form></aside>
 {% endif %}
-
 {% if entries %}
-
-    {% for entry in entries %}
-
+<h2>Journal Entries</h2>
+<ul>
+  {% for entry in entries %}
     <li>
-    <a href="{{ request.route_url('detail', id=entry.id) }}"> {{ entry.title }} </a>
+    <a href="{{ request.route_url('detail', id=entry.id) }}">{{ entry.title }}</a>
     </li>
-
-    {% endfor %}
-
+  {% endfor %}
 </ul>
 {% else %}
 <p>This journal is empty</p>
-
 {% endif %}
+{% if not login_form %}
 <p><a href="{{ request.route_url('action', action='create') }}">New Entry</a></p>
+{% endif %}
 {% endblock %}
-
